# neva

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: mirror.yml  release.yml  rust.yml
examples/: server.rs
examples/actix/: Cargo.toml
examples/actix/src/: main.rs
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/batch/: README.md
examples/batch/client/: Cargo.toml
examples/batch/client/src/: main.rs
examples/batch/server/: Cargo.toml
examples/batch/server/src/: main.rs
examples/cancellation/: Cargo.toml
examples/cancellation/src/: main.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/elicitation/: Cargo.toml  README.md
examples/elicitation/client/: Cargo.toml
examples/elicitation/client/src/: main.rs
examples/elicitation/server/: Cargo.toml
examples/elicitation/server/src/: main.rs
examples/http/: Cargo.toml
examples/http/src/: main.rs
examples/hyper/: Cargo.toml
examples/hyper/src/: main.rs
examples/large_resources_server/: Cargo.toml
examples/large_resources_server/src/: main.rs
examples/logging/: Cargo.toml
examples/logging/src/: main.rs
examples/middlewares/: Cargo.toml
examples/middlewares/src/: main.rs
examples/mrtr/: Cargo.toml  README.md
examples/mrtr/client/: Cargo.toml
examples/mrtr/client/src/: main.rs
examples/mrtr/server/: Cargo.toml
examples/mrtr/server/src/: main.rs
examples/pagination/: Cargo.toml
examples/pagination/src/: main.rs
examples/progress/: Cargo.toml
examples/progress/src/: main.rs
examples/protected-server/: Cargo.toml
examples/protected-server/src/: main.rs
examples/roots/: Cargo.toml  README.md
examples/roots/client/: Cargo.toml
examples/roots/client/src/: main.rs
examples/roots/server/: Cargo.toml
examples/roots/server/src/: main.rs
examples/sampling/: Cargo.toml  README.md
examples/sampling/cert/: ca.pem  dev-ca.pem  dev-server.key  dev-server.pem  server.key  server.pem
examples/sampling/client/: Cargo.toml
examples/sampling/client/src/: main.rs
examples/sampling/server/: Cargo.toml
examples/sampling/server/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs  prompts.rs  resources.rs  tools.rs
examples/subscription/: Cargo.toml
examples/subscription/src/: main.rs
examples/tasks/: README.md
examples/tasks/client/: Cargo.toml
examples/tasks/client/src/: main.rs
examples/tasks/server/: Cargo.toml
examples/tasks/server/src/: main.rs
examples/updates/: Cargo.toml
examples/updates/src/: main.rs
neva/: Cargo.toml
neva/src/: app.rs  client.rs  commands.rs  di.rs  error.rs  lib.rs  macros.rs  middleware.rs  shared.rs  transport.rs  types.rs
neva/src/app/: collection.rs  context.rs  extension.rs  greeter.rs  handler.rs  mrtr_store.rs  options.rs
neva/src/app/extension/: tasks.rs
neva/src/client/: batch.rs  handler.rs  notification_handler.rs  options.rs  subscribe.rs  task.rs
neva/src/di/: dc.rs
neva/src/error/: error_code.rs
neva/src/macros/: client.rs  server.rs
neva/src/middleware/: make_fn.rs  wrap.rs
neva/src/shared/: arc_slice.rs  arc_str.rs  either.rs  into_args.rs  memchr.rs  message_registry.rs  mt.rs  one_or_many.rs  requests_queue.rs  sse_session_registry.rs  task_api.rs  task_tracker.rs
neva/src/transport/: http.rs  stdio.rs
neva/src/transport/http/: client.rs  core.rs  server.rs
neva/src/transport/http/client/: mcp_session.rs  tls_config.rs
neva/src/transport/http/core/: auth.rs  cleanup.rs  context.rs  dispatch.rs  engine.rs  handlers.rs  types.rs
neva/src/transport/http/server/: auth_config.rs  volga.rs
neva/src/transport/http/server/volga/: auth_config.rs  engine.rs  responder.rs  routes.rs
neva/src/transport/stdio/: linux.rs  options.rs  windows.rs
neva/src/types/: cache.rs  capabilities.rs  completion.rs  content.rs  cursor.rs  elicitation.rs  helpers.rs  icon.rs  mrtr.rs  notification.rs  progress.rs  prompt.rs  reference.rs  request.rs  resource.rs  response.rs  root.rs  sampling.rs  schema.rs  schema_2020.rs  task.rs  tool.rs
neva/src/types/helpers/: extract.rs  macros.rs
neva/src/types/mrtr/: state.rs
neva/src/types/notification/: fmt.rs  formatter.rs  log_message.rs  progress.rs
neva/src/types/prompt/: from_request.rs  get_prompt_result.rs
neva/src/types/request/: from_request.rs  request_id.rs
neva/src/types/resource/: from_request.rs  read_resource_result.rs  route.rs  template.rs  uri.rs
neva/src/types/response/: error_details.rs  into_response.rs
neva/src/types/task/: task_api.rs
neva/src/types/tool/: call_tool_response.rs  from_request.rs
neva/tests/: dc_extractor_rc.rs  http_volga_integration.rs  mrtr_rc.rs  stateless_http_rc.rs  tasks_extension_rc.rs  tool_macro_rc.rs
neva_macros/: Cargo.toml  README.md
neva_macros/src/: client.rs  lib.rs  server.rs  shared.rs
neva_macros/src/server/: prompt.rs  resource.rs  tool.rs
src/: app.rs  error.rs  lib.rs  transport.rs  types.rs
src/app/: handler.rs  options.rs
src/transport/: stdio.rs
src/types/: capabilities.rs  completion.rs  content.rs  helpers.rs  prompt.rs  request.rs  resource.rs  response.rs  tool.rs
src/types/prompt/: get_prompt_result.rs
src/types/resource/: from_request.rs  read_resource_result.rs  route.rs  template.rs  uri.rs
src/types/response/: into_response.rs
src/types/tool/: call_tool_response.rs  from_request.rs
