[workspace]
members = ["neva", "neva_macros", "examples/*"]
default-members = ["neva", "neva_macros"]
exclude = ["examples/roots", "examples/sampling", "examples/elicitation"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2024"
rust-version = "1.90.0"
authors = ["Roman Emreis <roman.emreis@outlook.com>"]
repository = "https://github.com/RomanEmreis/neva"
documentation = "https://docs.rs/neva"

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
