[workspace]
resolver = "2"
members = ["neva", "neva_macros", "examples/*"]
default-members = ["neva", "neva_macros"]
exclude = [
    "examples/batch",
    "examples/roots", 
    "examples/sampling", 
    "examples/elicitation", 
    "examples/tasks"
]

[workspace.package]
version = "0.3.0"
license = "MIT"
edition = "2024"
rust-version = "1.90.0"
authors = ["Roman Emreis <roman.emreis@outlook.com>"]
repository = "https://github.com/RomanEmreis/neva"
documentation = "https://docs.rs/neva"
keywords = ["modelcontextprotocol", "mcp", "sdk", "ai", "llm"]
categories = [
    "network-programming",
    "asynchronous",
    "api-bindings",
    "web-programming"
]

[workspace.dependencies]
neva_macros = { path = "neva_macros", version = "0.3.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
