[package]
name = "neva"
version = "0.1.6"
edition = "2021"
rust-version = "1.85.0"
authors = ["Roman Emreis <roman.emreis@outlook.com>"]
license = "MIT"
repository = "https://github.com/RomanEmreis/neva"
description = "MCP SDK for Rust"
documentation = "https://docs.rs/neva"
readme = "../README.md"
categories = ["web-programming::http-server", "network-programming", "asynchronous"]
keywords = ["modelcontextprotocol", "mcp", "sdk", "ai", "framework"]

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
inventory = { version = "0.3.21", optional = true }
jsonschema = { version = "0.33.0", optional = true }
memchr = "2.7.5"
once_cell = { version = "1.21.3", features = ["std"], optional = true }
reqwest = { version = "0.12.23", features = ["stream", "json"], optional = true }
eventsource-client = { version = "0.15.0", default-features = false, optional = true }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
schemars = { version = "1.0.4" }
tokio = { version = "1.47.1", features = ["sync", "io-std", "io-util", "rt", "time", "macros"] }
tokio-stream = { version = "0.1.17", optional = true }
tokio-util = "0.7.16"
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json"], optional = true }
volga = { version = "0.6.4", features = ["di", "jwt-auth-full"], optional = true }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
neva_macros = { path = "../neva_macros", version = "0.1.6", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.0", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_Security", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30.0", features = ["signal"], optional = true }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.17" }

[features]
default = []
full = ["server-full", "client-full"]
server-full = ["server-macros", "tracing", "http-server"]
client-full = ["client-macros", "tracing", "http-client"]
http-server = ["server", "dep:volga", "dep:tokio-stream"]
http-client = ["client", "dep:reqwest", "dep:eventsource-client", "dep:tokio-stream", "dep:once_cell"]
tls = ["http-server", "volga?/tls", "eventsource-client?/rustls"]
macros = ["dep:neva_macros", "dep:inventory"]
client-macros = ["client", "macros", "neva_macros?/client"]
server-macros = ["server", "macros", "neva_macros?/server"]
client = ["dep:windows", "dep:nix", "dep:jsonschema", "tokio/process", "tokio/signal"]
server = ["tokio/signal"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:once_cell", "volga?/tracing"]

[package.metadata.docs.rs]
all-features = true