[package]
name = "neva"
version = "0.2.5"
description = "MCP SDK for Rust"
readme = "../README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
categories = ["web-programming::http-server", "network-programming", "asynchronous"]
keywords = ["modelcontextprotocol", "mcp", "sdk", "ai", "framework"]

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
memchr = "2.7.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
schemars = { version = "1.1.0" }
tokio = { version = "1.48.0", features = ["sync", "io-std", "io-util", "rt", "time", "macros"] }
tokio-util = "0.7.17"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# optional
inventory = { version = "0.3.21", optional = true }
jsonschema = { version = "0.37.4", optional = true }
once_cell = { version = "1.21.3", features = ["std"], optional = true }
reqwest = { version = "0.12.25", features = ["stream", "json"], optional = true }
sse-stream = { version = "0.2.1", optional = true }
tokio-stream = { version = "0.1.17", optional = true }
tracing = { version = "0.1.43", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json"], optional = true }
volga = { version = "0.7.2", features = ["di", "jwt-auth-full"], optional = true }
volga-di = { version = "0.7.2", optional = true }

# neva
neva_macros = { path = "../neva_macros", version = "0.2.5", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.0", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_Security", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30.0", features = ["signal"], optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.17" }

[features]
default = []
full = ["server-full", "client-full"]
di = ["dep:volga-di"]
macros = ["dep:neva_macros", "dep:inventory"]
tasks = []
tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:once_cell", "volga?/tracing"]

# server
server-full = ["server-macros", "tracing", "http-server", "server-tls", "di", "tasks"]
server-macros = ["server", "macros", "neva_macros?/server"]
server-tls = ["volga?/tls", "volga?/dev-cert"]
http-server = ["server", "dep:volga", "dep:tokio-stream"]
server = ["tokio/signal"]

# client
client-full = ["client-macros", "tracing", "http-client", "client-tls", "tasks"]
client-macros = ["client", "macros", "neva_macros?/client"]
client-tls = ["reqwest?/rustls-tls"]
http-client = ["client", "dep:reqwest", "dep:sse-stream", "dep:tokio-stream", "dep:once_cell"]
client = ["dep:windows", "dep:nix", "dep:jsonschema", "tokio/process", "tokio/signal"]

[package.metadata.docs.rs]
all-features = true