[package]
name = "neva_macros"
version = "0.2.3"
description = "Macros for Neva"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
categories = ["web-programming::http-server", "web-programming::http-client", "network-programming", "asynchronous"]
keywords = ["modelcontextprotocol", "mcp", "sdk", "ai", "framework"]

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full"] }
proc-macro2 = "1.0.103"

[features]
default = []
server = []
client = []