[package]
name = "neva_macros"
description = "Macros for Neva"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
categories = ["web-programming::http-server", "web-programming::http-client", "network-programming", "asynchronous"]
keywords = ["modelcontextprotocol", "mcp", "sdk", "ai", "framework"]

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
proc-macro2 = "1.0.106"

[features]
default = []
server = []
client = []