[package]
name = "neva_macros"
description = "Macros for Neva"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
proc-macro2 = "1.0.106"
serde_json = "1.0.150"

[features]
default = []
server = []
client = []

# Forwarded from neva. Switches the `#[tool]` macro to emit JSON Schema
# 2020-12 (`InputSchema`) registration code instead of legacy `ToolSchema`.
proto-2026-07-28-rc = []