[package]
name = "example-actix"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
neva = { path = "../../neva", features = ["http-server", "server-macros", "tracing", "di"] }
actix-web = "4"
bytes = "1.11"
http = "1.4"
serde_json = "1"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = "0.7"
tracing-subscriber = "0.3"
