[package]
name = "example-axum"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
neva = { path = "../../neva", features = ["http-server", "server-macros", "tracing", "di"] }
axum = "0.8"
bytes = "1.11"
futures-util = "0.3"
http = "1.4"
http-body-util = "0.1"
serde_json = "1"
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
