[package]
name = "client"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false

[dependencies]
neva = { path = "../../../neva", features = ["client", "tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
schemars = "1.0.4"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"