[package]
name = "server"
version = "0.1.0"
edition = "2024"
publish = false
rust-version.workspace = true

[dependencies]
neva = { path = "../../../neva", features = ["server-macros", "http-server-volga", "tracing", "proto-2026-07-28-rc"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
