[package]
name = "client"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false

[dependencies]
neva = { path = "../../../neva", features = ["client-full"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
