[package]
name = "server"
version = "0.1.0"
edition = "2024"
publish = false
rust-version.workspace = true

[dependencies]
neva = { path = "../../../neva", features = ["server-full"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
